feat: add ContextWeaver.Tests project with XUnit and a sample test, and update solution file and gitignore.

--- a/src/ContextWeaver.Cli/ContextWeaver.Cli.csproj
+++ b/src/ContextWeaver.Cli/ContextWeaver.Cli.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
         <ApplicationIcon>ContextWeaver.ico</ApplicationIcon>
         <AssemblyName>ContextWeaver</AssemblyName>
+        <RootNamespace>ContextWeaver</RootNamespace>
 
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>contextweaver</ToolCommandName>
