test: add E2E tests and evaluate System.CommandLine beta (H01 E2E, H11)

--- a/tests/ContextWeaver.Tests/ContextWeaver.Tests.csproj
+++ b/tests/ContextWeaver.Tests/ContextWeaver.Tests.csproj
@@ -22,4 +22,8 @@
         <ProjectReference Include="..\..\src\ContextWeaver.Cli\ContextWeaver.Cli.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Update="Fixtures\**\*" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
+
 </Project>
