refactor: restructure into 3 projects (Core, Engine, Cli) with Dependency Rule enforcement

--- a/tests/ContextWeaver.Tests/ContextWeaver.Tests.csproj
+++ b/tests/ContextWeaver.Tests/ContextWeaver.Tests.csproj
@@ -19,6 +19,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\src\ContextWeaver.Core\ContextWeaver.Core.csproj" />
+        <ProjectReference Include="..\..\src\ContextWeaver.Engine\ContextWeaver.Engine.csproj" />
         <ProjectReference Include="..\..\src\ContextWeaver.Cli\ContextWeaver.Cli.csproj" />
     </ItemGroup>
 
