--- a/src/ContextWeaver.Cli/ContextWeaver.Cli.csproj
+++ b/src/ContextWeaver.Cli/ContextWeaver.Cli.csproj
@@ -27,9 +27,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
-        <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
+        <ProjectReference Include="..\ContextWeaver.Engine\ContextWeaver.Engine.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     </ItemGroup>
 
     <ItemGroup>
@@ -42,7 +45,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="ContextWeaver.png" Pack="true" PackagePath="\"/>
+        <None Include="ContextWeaver.png" Pack="true" PackagePath="\" />
     </ItemGroup>
 
 </Project>
