--- a/.editorconfig
+++ b/.editorconfig
@@ -66,6 +66,11 @@ dotnet_diagnostic.SA1117.severity = none      # Parameters must be on same line 
 dotnet_diagnostic.CA1848.severity = none      # Use LoggerMessage delegates (too strict for now)
 dotnet_diagnostic.CA1305.severity = none      # Specify IFormatProvider (too verbose)
 dotnet_diagnostic.SA1519.severity = none
+dotnet_diagnostic.SA1600.severity = none      # Elements should be documented
+dotnet_diagnostic.SA1611.severity = none      # Element parameters should be documented
+dotnet_diagnostic.SA1615.severity = none      # Element return value should be documented
+dotnet_diagnostic.SA1623.severity = none      # Property summary documentation validation
+dotnet_diagnostic.SA1602.severity = none      # Enumeration items should be documented
 
 [**/*.Tests/**/*.cs]
 dotnet_diagnostic.CA1707.severity = none
