--- a/src/ContextWeaver.Cli/ContextWeaver.Cli.csproj
+++ b/src/ContextWeaver.Cli/ContextWeaver.Cli.csproj
@@ -40,7 +40,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
-        <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+        <PackageReference Include="Spectre.Console.Cli" Version="0.53.1" />
     </ItemGroup>
 
     <ItemGroup>
